--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
 name = virtualNodes
 version = 0.1.dev0
-author = Rishi Sharma
-author_email = rishi.sharma@epfl.ch
+author = Anonymous Authors
+author_email = first.last@anonymous.com
 license = MIT
 description = Privacy preserving decentralized machine learning using Virtual Node Indenties
 keywords =
@@ -12,8 +12,6 @@ keywords =
     learning
     sacs
     privacy
-url = https://rishisharma.netlify.app
-download_url = https://github.com/sacs-epfl/virtualNodes
 long_description = file: README.rst
 classifiers =
         Development Status :: 4 - Beta
