--- a/.gitattributes
+++ b/.gitattributes
@@ -8,3 +8,4 @@ model_zoos/denoiser.pth filter=lfs diff=lfs merge=lfs -text
 model_zoos/kernels_bicubicx234.mat filter=lfs diff=lfs merge=lfs -text
 *.model filter=lfs diff=lfs merge=lfs -text
 *.pth filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
