Artifact Evaluation fixes and beautification

--- a/artifact_scripts/small_scale/CIFAR10/EL/config_EL.ini
+++ b/artifact_scripts/small_scale/CIFAR10/EL/config_EL.ini
@@ -10,6 +10,7 @@ sizes =
 random_seed = 90
 partition_niid = dirichlet
 alpha = 0.1
+; lower the following in case of memory issues
 test_batch_size = 128
 
 [OPTIMIZER_PARAMS]
@@ -36,15 +37,24 @@ addresses_filepath = ip.json
 sharing_package = virtualNodes.sharing.VNodeSharingAttackRandomLOSS
 sharing_class = VNodeSharingAttackRandomLOSS
 compress = False
+; Only attack every attack_after rounds
 attack_after = 10
+; Toggle to enable or disable attacking
 perform_attack = True
+; Number of received model chunks to attack -> helps speed up experiments
 attack_random = 4
+; will_receive should be set to k * graph_degree
 will_receive = 4
 
 [NODE]
+; k in SHATTER
 vnodes_per_node = 1
+; Degree of the topology, each node has graph_degree neighbors
 graph_degree = 4
+; dynamic = True means that a new topology is generated at each round
 dynamic = True
+; Restricting threads per proc to reduce contention
 threads_per_proc = 2
+; Initial model is slightly perturbed
 perturb_model = True
 perturb_multiplier = 4
