--- a/artifact_scripts/small_scale/Twitter/Muffliato009/config_Muffliato009.ini
+++ b/artifact_scripts/small_scale/Twitter/Muffliato009/config_Muffliato009.ini
@@ -37,17 +37,26 @@ sharing_class = VNodeSharingAttackRandomLOSS
 compression_package = decentralizepy.compression.EliasFpzip
 compression_class = EliasFpzip
 compress = False
-attack_after = 30
+; Only attack every attack_after communication rounds (In Muffliato, attack the model just after training)
+attack_after = 100
+; Toggle to enable or disable attacking
 perform_attack = True
+; Number of received model chunks to attack -> helps speed up experiments
 attack_random = 4
+; will_receive should be set to k * graph_degree
 will_receive = 4
 
 [NODE]
+; k in SHATTER
 vnodes_per_node = 1
+; Degree of the topology, each node has graph_degree neighbors
 graph_degree = 4
-threads_per_proc = 2
+; dynamic = True means that a new topology is generated at each round
 dynamic = True
+; Initial model is slightly perturbed
 perturb_model = True
 perturb_multiplier = 4
+; Noise parameter sigma in Muffliato
 noise_std = 0.009
+; Number of communication rounds per training round in Muffliato
 train_after = 10
