--- a/artifact_scripts/small_scale/CIFAR10/Muffliato05/config_Muffliato05.ini
+++ b/artifact_scripts/small_scale/CIFAR10/Muffliato05/config_Muffliato05.ini
@@ -35,14 +35,23 @@ addresses_filepath = ip.json
 sharing_package = virtualNodes.sharing.VNodeSharingAttackRandomLOSS
 sharing_class = VNodeSharingAttackRandomLOSS
 compress = False
+; Only attack every attack_after communication rounds (In Muffliato, attack the model just after training)
 attack_after = 100
+; Toggle to enable or disable attacking
 perform_attack = True
+; Number of received model chunks to attack -> helps speed up experiments
 attack_random = 4
+; will_receive should be set to k * graph_degree
 will_receive = 4
 
 [NODE]
+; k in SHATTER
 vnodes_per_node = 1
+; Degree of the topology, each node has graph_degree neighbors
 graph_degree = 4
+; dynamic = True means that a new topology is generated at each round
 dynamic = True
+; Noise parameter sigma in Muffliato
 noise_std = 0.025
+; Number of communication rounds per training round in Muffliato
 train_after = 10
