--- a/artifact_scripts/small_scale/Movielens/VNodes2/config_VNodes2.ini
+++ b/artifact_scripts/small_scale/Movielens/VNodes2/config_VNodes2.ini
@@ -33,15 +33,24 @@ addresses_filepath = ip.json
 sharing_package = virtualNodes.sharing.VNodeSharingAttackRandomLOSS
 sharing_class = VNodeSharingAttackRandomLOSS
 compress = False
+; Only attack every attack_after rounds
 attack_after = 100
+; Toggle to enable or disable attacking
 perform_attack = True
+; Number of received model chunks to attack -> helps speed up experiments
 attack_random = 4
+; will_receive should be set to k * graph_degree
 will_receive = 8
 
 [NODE]
+; k in SHATTER
 vnodes_per_node = 2
+; Degree of the topology, each node has graph_degree neighbors
 graph_degree = 4
+; dynamic = True means that a new topology is generated at each round
 dynamic = True
-threads_per_proc = 4
+; Restricting threads per proc to reduce contention
+threads_per_proc = 2
+; Initial model is slightly perturbed
 perturb_model = True
 perturb_multiplier = 1
