--- a/artifact_scripts/small_scale/Twitter/VNodes2/config_VNodes2.ini
+++ b/artifact_scripts/small_scale/Twitter/VNodes2/config_VNodes2.ini
@@ -37,15 +37,24 @@ sharing_class = VNodeSharingAttackRandomLOSS
 compression_package = decentralizepy.compression.EliasFpzip
 compression_class = EliasFpzip
 compress = False
-attack_after = 3
+; Only attack every attack_after rounds
+attack_after = 10
+; Toggle to enable or disable attacking
 perform_attack = True
+; Number of received model chunks to attack -> helps speed up experiments
 attack_random = 4
+; will_receive should be set to k * graph_degree
 will_receive = 8
 
 [NODE]
+; k in SHATTER
 vnodes_per_node = 2
+; Degree of the topology, each node has graph_degree neighbors
 graph_degree = 4
-threads_per_proc = 2
+; dynamic = True means that a new topology is generated at each round
 dynamic = True
+; Restricting threads per proc to reduce contention
+threads_per_proc = 2
+; Initial model is slightly perturbed
 perturb_model = True
 perturb_multiplier = 4
