--- a/artifact_scripts/small_scale/Twitter/Muffliato009/config_Muffliato009.ini
+++ b/artifact_scripts/small_scale/Twitter/Muffliato009/config_Muffliato009.ini
@@ -3,8 +3,8 @@ dataset_package = decentralizepy.datasets.text.Twitter
 dataset_class = Twitter
 model_class = BERT
 tokenizer = BERT
-train_dir = /nfs/risharma/sent140/per_user_data/train
-test_dir = /nfs/risharma/sent140/data/test
+train_dir = ./data/sent140/train
+test_dir = ./data/sent140/test
 ; python list of fractions below
 sizes =
 random_seed = 90
