Partial Fix AEC Review

--- a/artifact_scripts/small_scale/Twitter/config_Muffliato009.ini
+++ b/artifact_scripts/small_scale/Twitter/config_Muffliato009.ini
@@ -8,7 +8,7 @@ test_dir = ./data/sent140/test
 ; python list of fractions below
 sizes =
 random_seed = 90
-test_batch_size = 32
+test_batch_size = 4
 at_most = None
 
 [OPTIMIZER_PARAMS]
@@ -21,7 +21,7 @@ training_package = decentralizepy.training.text.LLMTraining
 training_class = LLMTraining
 rounds = 1
 full_epochs = True
-batch_size = 32
+batch_size = 4
 shuffle = True
 loss_package = torch.nn
 loss_class = CrossEntropyLoss
@@ -36,24 +36,27 @@ sharing_package = virtualNodes.sharing.VNodeSharingAttackRandomLOSS
 sharing_class = VNodeSharingAttackRandomLOSS
 compression_package = decentralizepy.compression.EliasFpzip
 compression_class = EliasFpzip
-; Only attack every attack_after rounds
-attack_after = 10
+compress = False
+; Only attack every attack_after communication rounds (In Muffliato, attack the model just after training)
+attack_after = 100
 ; Toggle to enable or disable attacking
 perform_attack = True
 ; Number of received model chunks to attack -> helps speed up experiments
-attack_random = 4
+attack_random = 2
 ; will_receive should be set to k * graph_degree
-will_receive = 4
+will_receive = 2
 
 [NODE]
 ; k in SHATTER
 vnodes_per_node = 1
 ; Degree of the topology, each node has graph_degree neighbors
-graph_degree = 4
+graph_degree = 2
 ; dynamic = True means that a new topology is generated at each round
 dynamic = True
-; Restricting threads per proc to reduce contention
-threads_per_proc = 2
 ; Initial model is slightly perturbed
 perturb_model = True
 perturb_multiplier = 4
+; Noise parameter sigma in Muffliato
+noise_std = 0.009
+; Number of communication rounds per training round in Muffliato
+train_after = 10
